# akashic_record

./: .gitignore  Cargo.toml  README.md
src/: environment.rs  fact.rs  lib.rs  main.rs  query.rs  rule.rs  scope.rs  value.rs
src/engine/: environment.rs  eval.rs  load.rs  mod.rs  parser.rs  query.rs  utils.rs
src/structs/: fact.rs  mod.rs  rule.rs  scope.rs
