[package]
name = "akashic_record"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "akasha"
path = "src/main.rs"


[lib]
name = "libakasha"
path = "src/lib.rs"

[dependencies]
sexpr_ir = "^0.4.*"
sexpr_process = "^0.1.*"
rayon = "1.5.1"
